--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,25 @@ h2 ~ p {
 
 /* ヘッダースタイル */
 .header {
-  background-color: #aaa;
-  height: 400px;
-  width: 100%;
+  background-color: #000;
+  color: #fff;
+}
+.header-logo {
+  background-color: #000;
+  box-sizing: border-box;
+  display: block;
+  height: 10vh;
+  padding-top: 10px;
+  position: relative;
+  text-align: center;
+  width: 10vh;
+}
+.header-logo:hover,
+.header-logo:active {
+  opacity: 0.5;
+}
+.header-logo img {
+  width: 4.3vh;
 }
 .header-nav {
   float: right;
@@ -32,17 +48,11 @@ h2 ~ p {
   margin-left: 1em;
 }
 .header-nav > li ~ li {
-  border-left: 1px solid rgba(0, 0, 0, 0.3);
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
   padding-left: 1em;
 }
-.header-nav > li:first-child a {
-  color: #ed6e2f;
-}
-.header-nav > li:first-child a:hover {
-  color: #000;
-}
 .header-nav a {
-  color: #000;
+  color: #fff;
   font-size: 0.8rem;
   font-weight: bold;
   text-decoration: none;
@@ -52,19 +62,23 @@ h2 ~ p {
 .header-nav a:active {
   color: #ed6e2f;
 }
-.header-logo {
-  position: absolute;
-  bottom: 50px;
+.header-nav > li:first-child a {
+  color: #ed6e2f;
 }
-.header-logo:hover,
-.header-logo:active {
-  opacity: 0.5;
+.header-nav > li:first-child a:hover {
+  color: #fff;
 }
 
 /* ヒーロースタイル */
 .full-hero {
   background-color: #c7dbfc;
   height: 50vh;
+  position: relative;
+}
+.full-hero ul {
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 /* SNSスタイル */
