--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 /* グローバルスタイル */
+html {
+  box-shadow: 0 0 0 30px #000 inset;
+  padding: 0 30px;
+}
 body {
   font-family: helvetica, arial, sans;
 }
@@ -21,6 +25,11 @@ h2 ~ p {
 .header {
   background-color: #000;
   color: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 20;
+  left: 0;
+  top: 0;
 }
 .header-logo {
   background-color: #000;
@@ -34,7 +43,7 @@ h2 ~ p {
 }
 .header-logo:hover,
 .header-logo:active {
-  opacity: 0.5;
+  background-color: #ed6e2f;
 }
 .header-logo img {
   width: 4.3vh;
