--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,12 @@ h2 ~ p {
 }
 
 /* SNSスタイル */
-.hero-links a {
+.social-list {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
+.social-link {
   background: rgba(150, 150, 150, 0.5);
   border-radius: 99px;
   box-sizing: border-box;
@@ -127,11 +132,6 @@ h2 ~ p {
   text-decoration: none;
   vertical-align: middle;
   width: 2.5em;
-}
-.social-list {
-  list-style: none;
-  padding: 0;
-  text-align: center;
 }
 .social-list > li {
   display: inline-block;
